--- a/config/locales/ui/en.yml
+++ b/config/locales/ui/en.yml
@@ -167,5 +167,5 @@ en:
     questions: Questions?
     guide: Guide
     grade: Grade
-    unbounded: OpenSciEd
+    unbounded: Lcms Engine
     standards_institute: Standards Institute
