Correctly import from GDoc folder
Correctly handle situation when Google Document folder contains only one document inside.

That can be used now as a workaround to import huge objects: trying to import such object individually kills the request on timeout.

--- a/config/locales/admin/en.yml
+++ b/config/locales/admin/en.yml
@@ -214,6 +214,7 @@ en:
             title: Lesson Manager
             unit_bundles: Generate Unit Bundles
           create:
+            empty_folder: Google Documents folder is empty
             error: Error
             success: Lesson %{name} parsed successfully.
           new:
@@ -228,6 +229,7 @@ en:
         materials:
           create:
             bulk_import: Imported %{count} Materials from %{folder}
+            empty_folder: Google Documents folder is empty
             error: Error
             success: Material %{name} parsed successfully.
           destroy:
