Correctly import from GDoc folder
Correctly handle situation when Google Document folder contains only one document inside.

That can be used now as a workaround to import huge objects: trying to import such object individually kills the request on timeout.

--- a/config/locales/admin/en.yml
+++ b/config/locales/admin/en.yml
@@ -20,6 +20,7 @@ en:
             success: Access Code updated successfully.
         common:
           editing_disabled: Resource editing is disabled. Turn editing on in order to edit resources.
+          empty_folder: Google Documents folder is empty
         curriculums:
           update:
             success: Curriculum Tree saved successfully.
