(#117) Import single document/material via delayed job
Refs #117

Add special checkbox (checked by default) to import document/material using ActiveJob.

--- a/config/locales/ui/en.yml
+++ b/config/locales/ui/en.yml
@@ -124,6 +124,7 @@ en:
     add: Add
     all: All
     are_you_sure: Are you sure?
+    async: Asynchronously
     close: Close
     contents: Contents
     delete: Delete
