Add new form and service to import standards
To use it one needs to decorate or inherit from StandardsImportService
and override `create_from_csv_row` method.

--- a/config/locales/admin/en.yml
+++ b/config/locales/admin/en.yml
@@ -219,7 +219,12 @@ en:
             submit: Parse
         standards:
           edit:
-            page_title: "Edit Standard"
+            page_title: Edit Standard
+          index:
+            import: Import
+            placeholder: Enter URL for the Google Spreadsheet
+          import:
+            success: Import completed
           update:
             success: Standard updated
         nav:
