Improve error handling and cleanup methods in multiple classes
Parse error propagation: errors in tags and inside metadata tables are now displayed after import

This commit includes numerous changes to handle errors more efficiently across the application:
- Added `documents` to attr_reader in `DocTemplate::Template` to manage document collection.
- Integrated error handling by including `errors` in the attr_reader in `DocTemplate::tags`.
- `MaterialBuildService` now pulls errors from both `metadata_service` and `documents`.
- Removed grade-specific methods in `doc_template/tags` and `document_presenter` as they were no longer needed.
- Added a new interface for `MaterialBuildService`.

These changes provide enhanced error handling and code cleanup, improving overall robustness and maintainability of the application. The app now tolerates failures more gracefully while reducing the possibility of hidden bugs due to specific methods that were previously unhandy to use.

--- a/config/locales/admin/en.yml
+++ b/config/locales/admin/en.yml
@@ -187,8 +187,12 @@ en:
             title: Lesson Manager
             unit_bundles: Generate Unit Bundles
           create:
-            error: Error
-            success: Lesson %{name} parsed successfully. %{errors}
+            error: |
+              <p>Lesson %{name} has been parsed. The following errors were found:</p>
+              <ul>
+                %{errors}
+              </ul>
+            success: Lesson %{name} parsed successfully.
           new:
             page_title: Add a lesson
             submit: Parse
@@ -201,7 +205,11 @@ en:
         materials:
           create:
             bulk_import: Imported %{count} Materials from %{folder}
-            error: Error
+            error: |
+              <p>Material %{name} has been parsed. The following errors were found:</p>
+              <ul>
+                %{errors}
+              </ul>
             success: Material %{name} parsed successfully.
           destroy:
             success: Material deleted successfully.
